# hotgoss

./: .gitignore  Cargo.toml  README.md  flake.nix  ghc-tags.yaml  hotgoss.cabal  maelstrom  maelstrom.nix  shell.nix  test
src/: HotGoss.hs  Main.hs  challenge_1.rs  challenge_2.rs  challenge_3a.rs  challenge_3b.rs  main.rs  protocol.rs
src/HotGoss/: Challenge1.hs  Challenge2.hs  Challenge3a.hs  Challenge3b.hs  ErrorCode.hs  Indexed.hs  Protocol.hs  Protocol2.hs  Union.hs
