[package]
name = "hotgoss"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
pollster = "0.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tower-service = "0.3.2"

[lints]
clippy.pedantic = "warn"
clippy.use_self = "warn"
