cabal-version: 2.2

name: hotgoss
version: 0.1.0.0

common common
  build-depends:
    , base
    , relude
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude
  default-language: GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    TypeFamilies
    UndecidableInstances
    ViewPatterns
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=missing-methods
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wno-unticked-promoted-constructors
    -Wredundant-constraints

common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: common
  hs-source-dirs: src
  build-depends:
    , aeson
    , deriving-aeson
    , text
    , unliftio
  exposed-modules:
    HotGoss
    HotGoss.Challenge1
    HotGoss.Challenge2
    HotGoss.Challenge3a
    HotGoss.Challenge3b
    HotGoss.ErrorCode
    HotGoss.Indexed
    HotGoss.Protocol
    HotGoss.Union

executable hotgoss
  import: common, executable
  main-is: src/Main.hs
  build-depends: hotgoss
